www/static/css/home.css
/* -- Hero Section -- */

.hero-section {
    min-height: calc(100vh - 8.125rem);
    color: var(--color-text);

    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    justify-items: center;
}

.hero-section h1 {
    margin-bottom: var(--spacing-5);
    margin-top: calc(var(--spacing-1) * -1);
}

.hero-section .hero-text {
    width: 70%;
}

.hero-section .hero-quote {
    padding: calc(var(--spacing-4) + 1rem) var(--spacing-4) var(--spacing-4) calc(var(--spacing-4) + 2.5rem);
    position: relative;
}

.hero-section .hero-quote:before, .hero-section .hero-quote:after {
    --temp-detail-size: 80px;

    content: '';
    display: block;
    width: var(--temp-detail-size);
    height: var(--temp-detail-size);
    background-color: var(--color-text);
    clip-path: polygon(0 0, 0 100%, 4% 100%, 4% 52%, 70% 52%, 70% 48%, 4% 48%, 4% 0);
    position: absolute;
}

.hero-section .hero-quote:before {
    top: calc(var(--temp-detail-size) / -2);
    left: 0;
}

.hero-section .hero-quote:after {
    bottom: calc(var(--temp-detail-size) / -2);
    right: 0;
    transform: rotate(180deg);
}


.hero-section .hero-quote p {
    position: relative;
}

.hero-text .hero-quote p:before{
    content: '"';
    font-size: 5.5rem;
    color: var(--color-text);
    font-family: 'Roboto', sans-serif;
    font-style: normal;
    font-weight: 600;
    line-height: normal;

    position: absolute;
    top: -2rem;
    left: -2.5rem;
}

.hero-section .image-me {
    justify-self: stretch;
    align-self: stretch;

    background-image: url("static/images/me_high_aspect.jpg"), url("static/images/me_medium_aspect.jpg"), url("static/images/me_low_aspect.jpg");
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
}

@media screen and (max-width: 1024px) {
    .hero-section {
        grid-template-columns: 3fr 2fr;
    }
}

@media screen and (max-width: 768px) {
    .hero-section {
        min-height: calc(100vh - 5.325rem);
        grid-template-columns: 1fr;
        grid-template-rows: 45% 55%;
    }

    .hero-section .image-me {
        grid-row: 1 / 2;
        background-size: 60% auto;
    }
}

/* -- Categories Navigation -- */

.categories-navigation {
    margin: var(--spacing-5) 0;
    padding: var(--spacing-5) 0;
    text-align: center;
    min-height: 12rem;
}
.categories-navigation h2 {
    margin-bottom: var(--spacing-3);
}

.categories-navigation ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: var(--spacing-2);
}

.categories-navigation li {
    flex: 1;
    min-width: 200px;
    max-width: 200px;

    border-radius: 20px;
    transform: scale(1);
    transition: transform 0.4s ease-in-out;
}

.categories-navigation li:hover {
    transform: scale(1.1);
    transition: transform 0.4s ease-in-out;
}

#Events-element {
    background: linear-gradient(rgba(3, 3, 3, 0.7), rgba(3, 3, 3, 0.7)), url("static/uploads/502A4473_N_25percent.jpg") no-repeat center 20%;
    background-size: 100% auto;
}

#Travels-element {
    background: linear-gradient(rgba(3, 3, 3, 0.6), rgba(3, 3, 3, 0.6)), url("static/uploads/502A1572_25percent.jpg") no-repeat center 30%;
    background-size: 100% auto;
}

#Racing-Cars-element {
    background: linear-gradient(rgba(3, 3, 3, 0.6), rgba(3, 3, 3, 0.6)), url("static/uploads/502A0204_25percent.jpg") no-repeat center 25%;
    background-size: 100% auto;
}

.categories-navigation a {
    width: 100%;
    padding: var(--spacing-4) var(--spacing-1);
    text-decoration: none;
    color: var(--color-text);
    display: inline-block;

    font-size: 1rem;
    text-transform: uppercase;
    font-weight: 500;
    letter-spacing: 0.05em;
    transform: scale(1);
    transition: transform 0.4s ease-in-out;
}

.categories-navigation a:hover {
    transform: scale(1.1);
    transition: transform 0.4s ease-in-out;
}

/* -- Gallery -- */

/* Category section*/
.gallery-category {
    margin-bottom: var(--spacing-5);
    padding-top: var(--spacing-2);
    color: var(--color-text);
}

.gallery-category h3 {
    margin-top: calc(var(--spacing-1)* -1);
    margin-bottom: var(--spacing-3);
}

/* Image Gallery */
.gallery {
    list-style: none;

    column-count: 3;
    column-gap: var(--spacing-3);
    width: 100%;
    border-radius: 10px;
    box-shadow: 0 10px 20px rgba(3, 3, 3, 0.1);
}

.gallery-item {
    position: relative;
    break-inside: avoid;
    display: inline-block;
    margin-bottom: var(--spacing-3);
    width: 100%;
    border-radius: 8px;
    overflow: hidden;
    transition: all 0.2s ease-in-out;

    backface-visibility: hidden;
    -webkit-font-smoothing: subpixel-antialiased;

    box-shadow: 0 0 0 0 rgba(254,254,254,0.2);
    -webkit-box-shadow: 0 0 0 0 rgba(254,254,254,0.2);
    -moz-box-shadow: 0 0 0 0 rgba(254,254,254,0.2);
}

.gallery-item img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    display: block;
    cursor: pointer;
}

.gallery-item img.loaded{
    //
}

.gallery-item img.error {
    background-color: #fff;
    background-image: url("static/images/placeholder.jpg");
    background-size: 90% 90%;
    background-repeat: no-repeat;
    background-position: center;
}

.gallery-item:has(a:focus) {
    outline: 1px solid white;
}

.gallery-item:hover, .gallery-item:has(a:focus) {
    transform: scale(1.05) translate3d( 0, 0, 0) perspective(1px);

    z-index: 1;
    -webkit-transform: scale(1.05) translate3d( 0, 0, 0) perspective(1px);
    -moz-transform: scale(1.05) translate3d( 0, 0, 0) perspective(1px);
    -o-transform: scale(1.05) translate3d( 0, 0, 0) perspective(1px);
    -ms-transform: scale(1.05) translate3d( 0, 0, 0) perspective(1px);

    box-shadow: 3px 55px 117px -46px rgba(254,254,254,0.2);
    -webkit-box-shadow: 3px 55px 117px -46px rgba(254,254,254,0.2);
    -moz-box-shadow: 3px 55px 117px -46px rgba(254,254,254,0.2);
}

.gallery-item-info {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: var(--spacing-3);
    text-align: left;
    background: linear-gradient(0deg, #030303 0%, rgba(3, 3, 3, 0.00) 100%);
    pointer-events: none;


    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

/* -- Modal -- */

.loader.hidden {
    display: none;
}

.modal img {
    max-width: 90%;
    max-height: 70%;
    border-radius: 8px;
    margin-bottom: var(--spacing-3);
}

.modal-description {
    padding: var(--spacing-4);
}

@media (max-width: 1024px) {
    .gallery {
        column-count: 2;
        column-gap: var(--spacing-3);
    }
}

@media (max-width: 768px) {
    .gallery {
        column-count: 1;
    }

    .gallery-item {
        margin-bottom: var(--spacing-3);
    }
}

/* Aspect Ratio Utility */
.aspect-ratio-1 {
    aspect-ratio: 1 / 1;
}

.aspect-ratio-4-3 {
    aspect-ratio: 4 / 3;
}

.aspect-ratio-3-2 {
    aspect-ratio: 3 / 2;
}

.aspect-ratio-16-9 {
    aspect-ratio: 16 / 9;
}

.aspect-ratio-21-9 {
    aspect-ratio: 21 / 9;
}

.aspect-ratio-9-16 {
    aspect-ratio: 9 / 16;
}

.aspect-ratio-5-4 {
    aspect-ratio: 5 / 4;
}

.aspect-ratio-2-1 {
    aspect-ratio: 2 / 1;
}

.aspect-ratio-3-1 {
    aspect-ratio: 3 / 1;
}

.aspect-ratio-1-85-1 {
    aspect-ratio: 1.85 / 1;
}

.aspect-ratio-2-39-1 {
    aspect-ratio: 2.39 / 1;
}

.aspect-ratio-1-91-1 {
    aspect-ratio: 1.91 / 1;
}

.aspect-ratio-4-5 {
    aspect-ratio: 4 / 5;
}

.aspect-ratio-3-4 {
    aspect-ratio: 3 / 4;
}

.aspect-ratio-2-3 {
    aspect-ratio: 2 / 3;
}

/* -- Loader -- */
.loader {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    position: absolute;
    background-color: black;
}
.loader .spinner {
    width: 2.5rem;
    height: 2.5rem;
    border: 4px solid rgba(255, 255, 255, 0.3);
    border-top-color: var(--color-text);
    border-radius: 50%;
    animation: spin 1s linear infinite;
}
@keyframes spin {
    to {
        transform: rotate(360deg);
    }
}

